--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ version = "1.2"
 dependencies = [
     "click==8.1.8",
     "pdflatex==0.1.3",
-    "my-latex-cute-lib==1.4"
+    "my-latex-cute-lib==1.4",
+    "numpy==1.26.4"
 ]
